- Added documentation for several classes - Removed LambdaRunner and other unused code -